major code improvements & optimization, gui & gas planets wip

--- a/src/App.scss
+++ b/src/App.scss
@@ -73,6 +73,20 @@ html * {
     }
 }
 
+.modal-wrapper{
+    z-index: 99;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(black, 0.5);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .control-box{
     padding: 1rem;
     width: 300px;
