--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,11 @@ html * {
     font-family: "VT323", system-ui;
     text-transform: uppercase;
     font-size: 14px;
+
+    // Prevent user text select+
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 .canvas-background{
