--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,9 @@ button{
     border: none;
     border-radius: 0;
     background: #d8d8d8;
+    position: relative;
+    padding: 4px;
+    align-items: center ;
     &:hover:not([disabled]):not(.unclickable){
         outline: 2px solid #252525;
         cursor: pointer;
@@ -27,6 +30,12 @@ button{
 
     &:disabled{
         opacity: 0.4;
+    }
+    svg{
+        display: block;
+        // position: absolute;
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -279,13 +288,14 @@ input[type=text]{
     aspect-ratio: 1;
     display: flex;
     flex-flow: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     position: relative;
     // opacity: 1;
 
     .icon{ 
         display: flex;
-        height: 100%;
+        // height: 100%;
         aspect-ratio: 1;
         align-items: center;
         justify-content: center;
@@ -375,6 +385,7 @@ input[type=text]{
 }
 
 .mobile-overlay{
+    text-align: center;
     position: fixed;
     display: none;
     top: 0;
@@ -400,6 +411,9 @@ input[type=text]{
             margin: auto;
         }
     }
+    .canvas-background{
+        display: none;
+    }
 }
 
 #about{
@@ -414,14 +428,14 @@ input[type=text]{
 
 @keyframes pulse-waves {
     0% {
-      box-shadow: 0 0 0 0 color-mix(in srgb, currentColor 70%, transparent);;
+      box-shadow: 0 0 0 0 rgba(#f18a30, 0.7);
     }
   
     70% {
-      box-shadow: 0 0 0 10px color-mix(in srgb, currentColor 0%, transparent);;
+      box-shadow: 0 0 0 10px rgba(#f18a30, 0);
     }
   
     100% {
-      box-shadow: 0 0 0 0 color-mix(in srgb, currentColor 0%, transparent);;
+      box-shadow: 0 0 0 0 rgba(#f18a30, 0);
     }
 }
